--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 site_name: 'ESIIL Postdoctoral Researcher OASIS'
 site_description: 'Central resource for ESIIL postdoctoral researchers'
 site_author: Ty Tuff
-site_url: https://cu-esiil.github.io/Postdoc_OASIS
+site_url: https://cu-esiil.github.io/postdocoasis_test
 
 # Repository
-repo_name: Postdoc_OASIS
-repo_url: https://github.com/CU-ESIIL/Postdoc_OASIS
+repo_name: Postdoc_OASIS_test_nan
+repo_url: https://github.com/nanhosen/postdocoasis_test
 edit_uri: edit/main/docs/
 # Copyright
 copyright: 'Copyright &copy; 2023 University of Colorado Boulder'
